@@ -1,5 +1,5 @@
-MD5 78a67acc43be3ea7404d81695cd5695c alt-font-menu-0.4.ebuild 587
-MD5 03261977c257dcc816a9078345b8d2fa ChangeLog 446
+MD5 1b631031902fcb95e762d18f0cfca81b alt-font-menu-0.4.ebuild 578
+MD5 235c8552859b2d7ff8c30ab8b788a3fb ChangeLog 568
 MD5 f21574e693de4e6bec7f94b72e7ea13a metadata.xml 432
 MD5 67a4efb98ff441bb697eb234c353805d files/50alt-font-menu-gentoo.el 237
 MD5 1bc2bcf0a856f4afe0de193475d14605 files/digest-alt-font-menu-0.4 67
