@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/alt-font-menu/alt-font-menu-0.4.ebuild,v 1.4 2004/06/24 22:05:31 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/alt-font-menu/alt-font-menu-0.4.ebuild,v 1.5 2004/11/01 10:37:09 usata Exp $
 
 inherit elisp
 
@@ -9,8 +9,7 @@ HOMEPAGE="http://www.emacswiki.org/cgi-bin/wiki/KahlilHodgson"
 SRC_URI="mirror://gentoo/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86 ~alpha ~ppc-macos"
 IUSE=""
-DEPEND="virtual/emacs"
 
 SITEFILE=50alt-font-menu-gentoo.el
