@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/alt-font-menu
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/alt-font-menu/ChangeLog,v 1.2 2004/06/24 22:05:31 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/alt-font-menu/ChangeLog,v 1.3 2004/11/01 10:37:09 usata Exp $
+
+  01 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> alt-font-menu-0.4.ebuild:
+  Stable on x86. Added to ~alpha and ~ppc-macos.
 
 *alt-font-menu-0.4 (12 Nov 2003)
 
